--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div>
     <header id="header">
       <div class="container">
-        <nav class="navbar navbar-expand-lg fixed-top">
+        <nav class="navbar fixed-top">
           <a class="navbar-brand" href="#">
             <img src="./images/My logo.gif" alt="JL" height="48">
           </a>
@@ -43,7 +43,7 @@
       <h2 class="projects-section-header text-center">These are some of my projects</h2>
       <div class="row card-container">
         <div class="col-md-2"></div>
-        <div class="card col-md-4 col-sm-3" style="width: 18rem;">
+        <div class="card col-md-4" style="width: 18rem;">
             <a href="https://github.com/JulieL24/carcar" target="_blank" rel="noopener noreferrer">
                 <img src="./images/carcar.gif" class="card-img-top" alt="carcar">
             </a>
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div class="col-md-2"></div>
-        <div class="card col-md-4 col-sm-3" style="width: 18rem;">
+        <div class="card col-md-4" style="width: 18rem;">
             <a href="https://gitlab.com/aletrail/ale-trail-alpha" target="_blank" rel="noopener noreferrer">
                 <img src="./images/Ale Trail.gif" class="card-img-top" alt="Ale Trail">
             </a>
