added new project

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div>
     <header id="header">
-      <div class="container">
+      <div class="container-fluid">
         <nav class="navbar fixed-top">
           <a class="navbar-brand" href="#">
             <img src="./images/My logo.gif" alt="JL" height="48">
@@ -42,24 +42,31 @@
     <section id="projects" class="projects-section">
       <h2 class="projects-section-header text-center">These are some of my projects</h2>
       <div class="row card-container">
-        <div class="col-md-2"></div>
-        <div class="card col-md-4" style="width: 18rem;">
+        <div class="card col-md-4" style="width: 20rem;">
             <a href="https://github.com/JulieL24/carcar" target="_blank" rel="noopener noreferrer">
-                <img src="./images/carcar.gif" class="card-img-top" alt="carcar">
+                <img src="./images/carcar.gif" class="card-img-top img-fluid" alt="carcar">
             </a>
             <div class="card-body">
             <h5 class="card-title">Carcar</h5>
             <p class="card-text">CarCar is a webapp designed to track a car dealership with services for it's inventory, sales, and service.</p>
             </div>
         </div>
-        <div class="col-md-2"></div>
-        <div class="card col-md-4" style="width: 18rem;">
+        <div class="card col-md-4" style="width: 20rem;">
             <a href="https://gitlab.com/aletrail/ale-trail-alpha" target="_blank" rel="noopener noreferrer">
-                <img src="./images/Ale Trail.gif" class="card-img-top" alt="Ale Trail">
+                <img src="./images/Ale Trail.gif" class="card-img-top img-fluid" alt="Ale Trail">
             </a>
             <div class="card-body">
             <h5 class="card-title">Ale Trail</h5>
             <p class="card-text">This app is designed to allow users to find breweries and beers in their local area and add it to their favorites list.</p>
+            </div>
+        </div>
+        <div class="card col-md-4" style="width: 20rem;">
+            <a href="https://github.com/JulieL24/BobaTime" target="_blank" rel="noopener noreferrer">
+                <img src="./images/bobatime.gif" class="card-img-top img-fluid" alt="Boba Time">
+            </a>
+            <div class="card-body">
+            <h5 class="card-title">Boba Time</h5>
+            <p class="card-text">Boba Time app is for discovering new boba places to try using Yelp API. If you're unsure which boba place to try, create an account so the app will generate a place for you to try based on specified location.</p>
             </div>
         </div>
       </div>
@@ -71,6 +78,10 @@
         <i class="fab fa-css3" style="font-size:38px"> CSS</i>
         <i class='fab fa-python' style="font-size:38px"> Python</i>
         <i class='fab fa-js' style="font-size:38px"> JavaScript</i>
+        <i class='fab fa-react' style="font-size:38px"> React</i>
+        <i class='fab fa-bootstrap' style="font-size:38px"> Bootstrap</i>
+
+
       </div>
     </section>
     <section id="connect" class="connect text-center">
